--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -8,7 +8,7 @@
         <h2>Cadastro de categorias</h2>
       </div>
       <div class="card-body">
-        <form action="">
+        <form action="/categories/save" method="POST">
           <input type="text" name="title" placeholder="Digite o título" class="form-control"><br>
           <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
